text alignment mistake solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@
     width: 50px;
     height: 35px;
     position: absolute;
-    right: 4%;
+    right: -1%;
     top: 7%;
     display: block;
     z-index: 10;
@@ -173,10 +173,10 @@
 }
 
 #menuicon .line {
-    width: 50px;
+    width: 35px;
     background: #000000;
     margin: 6px 0 0 0;
-    height: 5px;
+    height: 4px;
     display: block;
     transition: all 800ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
@@ -756,13 +756,9 @@ ul {
 
 @media (max-width:992px) {
     .hustlin-hardos {
-        font-family: "ModernoFBComp", sans-serif;
+        text-align: center;
         font-size: var(--font-size-24);
-        color: var(--color-black);
-        font-weight: 400;
-        line-height: 28.8px;
         position: absolute;
-        left: 40%;
         top: 1%;
 
     }
@@ -836,6 +832,15 @@ ul {
 
     .latest-tweets {
         font-size: var(--font-size-35) !important;
+    }
+
+    .hustlin-hardos {
+        font-size: var(--font-size-24);
+        text-align: center;
+        position: absolute;
+        top: 1%;
+        left: 32%;
+
     }
 
 }
